--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -4,7 +4,10 @@ on:
       flag:
         description: 'Should skip reusable caller?'
         required: true
-        type: boolean
+        type: choice
+        options:
+          - 'true'
+          - 'false'
 
 jobs:
   init:
